good/src/main/java/com/example/sample/presentation/view/ItemListViewChoice.java
package com.example.sample.presentation.view;

public enum ItemListViewChoice {
  USE_ITEM,
  BACK;
}
