bad/src/main/java/com/example/sample/objects/PhysicalAttackType.java
package com.example.sample.objects;

public enum PhysicalAttackType implements BattleTechnique {
  PUNCH,
  KICK;
}
